# Lanchon

./: README.md  lanchon.cabal
Lanchon/Core/: Base.hs
Lanchon/Plugins/: ListExecutables.hs
Lanchon/UI/: Launcher.hs
